--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@ https://www.tooplate.com/view/2118-chilling-cafe
                 <th>На заказ</th>
               </tr>
               <tr>
-                <td class="tm-text-left">Бууза (4 шт.)</td>
+                <td class="tm-text-left-0">Бууза (4 шт.)</td>
                 <td>100 р.</td>
                 <td>80 р.</td>
               </tr>
               <tr>
-                <td class="tm-text-left">Плов с бараниной (100 гр.)</td>
+                <td class="tm-text-left-0">Плов с бараниной (100 гр.)</td>
                 <td>120 р.</td>
                 <td>100 р.</td>
               </tr>
@@ -59,15 +59,15 @@ https://www.tooplate.com/view/2118-chilling-cafe
                 <th>В кафе</th>
               </tr>
               <tr>
-                <td class="tm-text-left">Зеленый крупнолистовой (Фуцзянь, Китай)</td>
+                <td class="tm-text-left-1">Зеленый крупнолистовой (Фуцзянь, Китай)</td>
                 <td>100 р.</td>
               </tr>
               <tr>
-                <td class="tm-text-left">Черный крупнолистовой (Индия)</td>
+                <td class="tm-text-left-1">Черный крупнолистовой (Индия)</td>
                 <td>90 р.</td>
               </tr>
               <tr>
-                <td class="tm-text-left">Улун (Фуцзянь и Юннань, Китай)</td>
+                <td class="tm-text-left-1">Улун (Фуцзянь и Юннань, Китай)</td>
                 <td>80 р.</td>
               </tr>
             </table>
@@ -130,8 +130,7 @@ https://www.tooplate.com/view/2118-chilling-cafe
       </div>
       <footer>
         <p class="tm-text-white tm-footer-text">
-          Copyright &copy; 2020 ЭКО ПРОДУКТ
-          . Design:
+          Copyright &copy; 2020 ЭКО ПРОДУКТ.<br> Design:
           <a href="https://lp.qutuva.com" class="tm-footer-link">DLQ-team</a>
         </p>
       </footer>
