--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@ https://www.tooplate.com/view/2118-chilling-cafe
             Мы специализируемся на приготовлении традиционных блюд - бурятских бууза и плова. Чайная карта представлена лучшими сортами зеленого и черного чая. Отлично приготовленный кофе подарит заряд свежести и энергии.
           </p>
           <p class="tm-mb-0">
-            Кафе располагается на втором этаже здания по адресу: Иркутск, Рабочего Штаба, 78. Мы будем рады видеть Вас !
+            Кафе располагается на втором этаже здания по адресу: Иркутск, Рабочего Штаба, 78.
+          </p>
+          <p class="tm-mb-0">
+            Мы будем рады видеть Вас !
           </p>
         </section>
         <hr />
